--- a/style.css
+++ b/style.css
@@ -38,6 +38,14 @@ body {
 	background-color: white;
 }
 
+footer {
+  font-family: 'Montserrat', Helvetica, Arial, sans-serif;
+  font-weight: 200;
+  font-size: 15px;
+  margin-top: 30px;
+  font-style: italic;
+}
+
 .bold {font-weight: 700;
 font-size: 40px;
 }
