--- a/style.css
+++ b/style.css
@@ -115,8 +115,8 @@ font-size: 40px;
 .video {
   position: relative;
   padding-bottom: 56.25%;
-  padding-top: 25px;
-  height: 0;
+  /* padding-top: 25px; */
+  /* height: 25%; */
 }
 
 .video iframe {
@@ -124,7 +124,7 @@ font-size: 40px;
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 100%;
+	height: 75%;
 }
 
 .howto {
@@ -172,7 +172,7 @@ font-size: 40px;
 
   #work-container {
       display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 2fr 2fr;
           grid-gap: 20px;
           grid-template-areas:
             "a a a"
@@ -200,7 +200,23 @@ font-size: 40px;
       #contact {
         display: flex;
         flex-flow: row;
-        justify-content: space-between;
+        justify-content: space-between;}
+
+    #home-container {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+            grid-gap: 20px;
+            grid-template-areas:
+                  "a a a"
+                  "b c c";}
+
+    .video {
+        grid-area: a;}
+
+    .bold {
+        grid-area: b; }
+    .services {
+        grid-area: c; }
       }
 
 @media (min-width:1000px) {
