--- a/style.css
+++ b/style.css
@@ -238,6 +238,7 @@ font-size: 40px;
     #home-container {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 4fr 1fr;
             grid-gap: 20px;
             grid-template-areas:
                   "a a a"
@@ -245,7 +246,6 @@ font-size: 40px;
 
     .video {
         grid-area: a;}
-
     .bold {
         grid-area: b; }
     .services {
