--- a/style.css
+++ b/style.css
@@ -199,6 +199,15 @@ font-size: 40px;
   display: none;
 }
 
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+.mySlides {
+    display: none;
+}
 
 @media (min-width:500px) {
 
