--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ font-size: 40px;
   padding: 0;
 }
 #nav2 {
-  background-color: grey;
+  background-color: #FFF7A2;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -114,7 +114,7 @@ font-size: 40px;
   font-size: 15px;}
 
   #nav2 a:hover, #nav a:active {
- 	background-color: #ABAAAA;
+ 	background-color: #FFF7A2;
  }
 
 .video {
