--- a/style.css
+++ b/style.css
@@ -261,7 +261,7 @@ font-size: 40px;
   display: block;
 }
 
-  #work-container {
+  /* #work-container {
       display: grid;
       grid-template-columns: 1fr 1fr 1fr;
           grid-gap: 20px;
@@ -287,7 +287,7 @@ font-size: 40px;
       width: 100%;
       margin-right: 10px;
       grid-area: d;}
-}
+} */
 
   #contact {
       display: flex;
