--- a/style.css
+++ b/style.css
@@ -56,6 +56,9 @@ font-size: 40px;
 .bold2 {font-weight: 700;
 }
 
+.serv {
+  margin-top: 24px;
+}
 
 #nav li{
   margin: 0;
@@ -167,15 +170,9 @@ font-size: 40px;
   margin-left: 0px;
 }
 
-.logo1 {
-  display: flex;
-  margin: auto;
-  border: none;
-  width: 70%;
-}
 
-.logo2 {
-  display: block;
+#logo {
+  display: flex;
   margin-left: auto;
   margin-right: auto;
   width: 60%;
@@ -204,6 +201,10 @@ font-size: 40px;
   margin: 0 auto;
 }
 
+#logo4life {
+  display: none;
+}
+
 
 /* ***BEGIN MEDIA QUERYS*** */
 
@@ -215,6 +216,7 @@ font-size: 40px;
     display: block;
     margin-top: 12px;
   }
+
 
 .search1 {
     display: none;
@@ -234,16 +236,9 @@ font-size: 40px;
   #nav a {
       border: none;}
 
-  .logo1 {
-        width: 30%;
-        margin-left: 2px;
-      }
 
-  /* .logo2 {
-   width: 40%;
-      } */
 
-      .logo2 {
+      #logo {
         display: block;
         margin-left: auto;
         margin-right: auto;
@@ -252,27 +247,56 @@ font-size: 40px;
       }
 
 
-
-
   #contact {
       display: flex;
       flex-flow: row;
       justify-content: space-between;
     }
 
+#logo4life {
+  display: none;
+}
+
+
 }
 
 
 @media (min-width:1000px) {
 
+#logo {
+  display: none;
+}
 
-  .logo2 {
+#logo4life {
+  display: flex;
+}
+
+
+#logorder {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+      grid-template-areas:
+        "a b";}
+
+    #logo4life {
+      grid-area: a;
+    }
+
+    #nav {
+      grid-area: b;
+      margin-top: 50px;
+    }
+
+}
+
+
+/* #logo {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 30%;
+    width: 50%;
     margin-bottom: -20px;
-  }
+  } */
 
   #work-container {
       display: grid;
@@ -301,18 +325,6 @@ font-size: 40px;
       margin-right: 10px;
       grid-area: d;}
   }
-
-
-
-.logo1 {
-  width: 20%;
-  margin-left: 2px;
-}
-
-/* .logo2 {
-  width: 30%;
-} */
-
 
 
   #nav2 {
