--- a/style.css
+++ b/style.css
@@ -153,14 +153,20 @@ font-size: 40px;
   font-size: 30px;
 }
 
-#howto {margin-bottom: 30px;}
+.howtoreg {
+  margin-top: 32px;
+  margin-bottom: -5px;
+}
+
+#howto {
+  margin-bottom: 30px;
+}
 
 .meet {
   font-weight: 700;
   font-size: 30px;
   margin-bottom: 80px;
   text-align: right;
-  border-top: solid;
   padding-top: 5px;
 }
 
@@ -206,11 +212,17 @@ font-size: 40px;
 }
 
 
+.join1 {
+  display: none;
+}
+
+
 /* ***BEGIN MEDIA QUERYS*** */
 
 
 
 @media (min-width:650px) {
+
 
   .navsearch {
     display: block;
@@ -258,10 +270,49 @@ font-size: 40px;
 }
 
 
+
+#photogrid {
+  display: grid;
+  grid-template-columns: 2fr 2fr;
+  grid-gap: 20px;
+  margin-top: -10px;
+  grid-template-areas:
+    "a b"
+    "c d";
+  }
+
+  .photo1 {
+    grid-area: a;
+  }
+
+  .photo2 {
+    grid-area: b;
+  }
+
+  .photo3 {
+    grid-area: c;
+  }
+
+  .photo4 {
+    grid-area: d;
+  }
+}
+
+.join1 {
+  display: none;
+}
+
 }
 
 
 @media (min-width:1000px) {
+
+  .join1 {
+    display: flex;
+  }
+
+  /* **** not working^***** */
+
 
 #logo {
   display: none;
@@ -385,7 +436,6 @@ font-size: 40px;
       .photo4 {
         grid-area: h;
       }
-
 
 
     #grid4work2 {
