--- a/style.css
+++ b/style.css
@@ -270,34 +270,6 @@ font-size: 40px;
 }
 
 
-
-#photogrid {
-  display: grid;
-  grid-template-columns: 2fr 2fr;
-  grid-gap: 20px;
-  margin-top: -10px;
-  grid-template-areas:
-    "a b"
-    "c d";
-  }
-
-  .photo1 {
-    grid-area: a;
-  }
-
-  .photo2 {
-    grid-area: b;
-  }
-
-  .photo3 {
-    grid-area: c;
-  }
-
-  .photo4 {
-    grid-area: d;
-  }
-}
-
 .join1 {
   display: none;
 }
@@ -462,5 +434,38 @@ font-size: 40px;
         grid-area: d;
       }
 
+#photogrid {
+  display: grid;
+  grid-template-columns: 2fr 2fr;
+  grid-gap: 20px;
+  margin-top: -10px;
+  grid-template-areas:
+    "a b"
+    "c d"
+    "e f";
+  }
 
+  .photo1 {
+    grid-area: a;
+  }
+
+  .photo2 {
+    grid-area: b;
+  }
+
+  .photo3 {
+    grid-area: c;
+  }
+
+  .photo4 {
+    grid-area: d;
+  }
+
+  .photo5 {
+    grid-area: e;
+  }
+
+  .photo6 {
+    grid-area: f;
+  }
 }
