--- a/style.css
+++ b/style.css
@@ -390,7 +390,7 @@ font-size: 40px;
 
   #photogrid {
         display: grid;
-        grid-template-columns: 2fr 2fr;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
         grid-gap: 20px;
         margin-top: -10px;
         grid-template-areas:
