--- a/style.css
+++ b/style.css
@@ -358,6 +358,7 @@ font-size: 40px;
     display: grid;
     grid-template-columns: 1fr 2fr 2fr;
     grid-gap: 20px;
+    margin-bottom: 30px;
     grid-template-areas:
       "a b b"
       "a c d";
@@ -390,12 +391,11 @@ font-size: 40px;
 
   #photogrid {
         display: grid;
-        grid-template-columns: 2fr 2fr;
+        grid-template-columns: 1fr 1fr 1fr;
         grid-gap: 20px;
-        margin-top: -10px;
         grid-template-areas:
-          "a b c d"
-          "e f . .";
+          "a b c"
+          "d e f";
         }
 
         .photo1 {
