--- a/style.css
+++ b/style.css
@@ -312,9 +312,8 @@ font-size: 40px;
 
       #photogrid {
             display: grid;
-            grid-template-columns: 2fr 2fr;
+            grid-template-columns: 1fr 1fr;
             grid-gap: 20px;
-            margin-top: -10px;
             grid-template-areas:
               "a b"
               "c d"
@@ -344,6 +343,31 @@ font-size: 40px;
             .photo6 {
               grid-area: f;
             }
+
+            #photogrid2 {
+              display: grid;
+              grid-template-columns: 1fr 1fr;
+              grid-gap: 20px;
+              grid-template-areas:
+                "a b"
+                "c d";
+              }
+
+              .photo1 {
+                grid-area: a;
+              }
+
+              .photo2 {
+                grid-area: b;
+              }
+
+              .photo3 {
+                grid-area: c;
+              }
+
+              .photo4 {
+                grid-area: d;
+              }
 
 }
 
@@ -429,6 +453,7 @@ font-size: 40px;
     display: grid;
     grid-template-columns: 1fr 2fr 2fr;
     grid-gap: 20px;
+    margin-bottom: 30px;
     grid-template-areas:
       "a b b"
       "a c d";
@@ -461,11 +486,11 @@ font-size: 40px;
 
   #photogrid {
         display: grid;
-        grid-template-columns: 2fr 2fr 2fr 2fr;
+        grid-template-columns: 1fr 1fr 1fr;
         grid-gap: 20px;
         grid-template-areas:
-          "a b c d"
-          "e f . .";
+          "a b c"
+          "d e f";
         }
 
         .photo1 {
