--- a/style.css
+++ b/style.css
@@ -60,6 +60,42 @@ font-size: 40px;
   margin-top: 24px;
 }
 
+.underline {
+  font-weight: bold;
+  font-size: 25px;
+  text-align: center;
+}
+
+.Mel {
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  margin-bottom: -20px;
+}
+
+.contactinfo {
+  margin-left: -38px;
+}
+
+
+.name {
+  font-size: 35px;
+  font-style: italic;
+  font-weight: 10px;
+  text-align: center;
+}
+
+#contactlist {
+  list-style-type: none;
+  font-size: 20px;
+  margin-top: -15px;
+}
+
+.space {
+  margin-bottom: 8px;
+}
+
 #nav li{
   margin: 0;
   padding: 0;
@@ -189,15 +225,6 @@ font-size: 40px;
   margin-left: 0px;
 }
 
-#contact {
-  list-style: none;
-  display: block;
-  padding: 10px;
-  font-style: italic;
-  background-color: #ABAAAA;
-}
-
-
 .navsearch {
   display: none;
 }
@@ -258,12 +285,6 @@ font-size: 40px;
         margin-bottom: -20px;
       }
 
-
-  #contact {
-      display: flex;
-      flex-flow: row;
-      justify-content: space-between;
-    }
 
 #logo4life {
   display: none;
@@ -373,17 +394,41 @@ font-size: 40px;
                 grid-area: e;
               }
 
+
+              #contact {
+                display: grid;
+                grid-template-columns: 1fr 1fr;
+                grid-gap: 10px;
+                grid-template-areas:
+                "a b"
+                "c c";}
+
+                .Mel {
+                  grid-area: a;
+                }
+
+                .contactinfo {
+                  grid-area: b;
+                  margin-top: 30px;
+                }
+
+                .description1 {
+                  grid-area: c;
+                  margin-top: 30px;
+                }
+
+
 }
 
 
 @media (min-width:1000px) {
 
   .join1 {
-    display: flex;
+    display: block;
+    text-align: center;
+    margin-top: 10px;
+    font-size: 25px;
   }
-
-  /* **** not working^***** */
-
 
 #logo {
   display: none;
@@ -416,6 +461,34 @@ font-size: 40px;
     width: 50%;
     margin-bottom: -20px;
   } */
+
+  #contact {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-gap: 20px;
+    grid-template-areas:
+    "a b"
+    "a c";}
+
+    .Mel {
+      grid-area: a;
+      width: 70%;
+      margin-bottom: 20px;
+    }
+
+    .contactinfo {
+      grid-area: b;
+      margin-top: -10px;
+      margin-left: -38px;
+    }
+
+    .description1 {
+      grid-area: c;
+      margin-top: -10px;
+    }
+
+
+
 
   #work-container {
       display: grid;
@@ -455,9 +528,11 @@ font-size: 40px;
 
   #grid4work {
     display: grid;
+    max-width: 95%;
+    margin: 0 auto;
     grid-template-columns: 1fr 2fr 2fr;
     grid-gap: 20px;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
     grid-template-areas:
       "a b b"
       "a c d";
@@ -490,11 +565,19 @@ font-size: 40px;
 
   #photogrid {
         display: grid;
+        max-width: 95%;
+        margin: 0 auto;
         grid-template-columns: 1fr 1fr 1fr;
         grid-gap: 20px;
         grid-template-areas:
+          "g g g"
           "a b c"
           "d e f";
+        }
+
+        .underline {
+          grid-area: g;
+          margin-bottom: 15px;
         }
 
         .photo1 {
@@ -525,11 +608,19 @@ font-size: 40px;
 
     #photogrid2 {
       display: grid;
+      max-width: 95%;
+      margin: 0 auto;
       grid-template-columns: 1fr 1fr 1fr;
       grid-gap: 20px;
       grid-template-areas:
+        "g g g"
         "a b c"
         "d e .";
+      }
+
+      .underline {
+        grid-area: g;
+        margin-bottom: 15px;
       }
 
       .photo1 {
