--- a/style.css
+++ b/style.css
@@ -29,10 +29,10 @@ h1 {
    font-family: 'Montserrat', Helvetica, Arial, sans-serif;
    font-weight: 550;
    font-size: 35px;
-   background-color: #FFF7A2;
+   background-color: #bdbdbd;
    padding: 10px;
-   text-decoration: underline;
    margin-bottom: -20px;
+   border-bottom: 2px; 
  }
 
 body {
@@ -130,7 +130,7 @@ font-size: 40px;
   padding: 0;
 }
 #nav2 {
-  background-color: #FFF7A2;
+  background-color: #bdbdbd;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -436,12 +436,15 @@ font-size: 40px;
 
 #logo4life {
   display: flex;
+  align-content: center;
+  width: 90%;
+  margin: 20px;
 }
 
 
 #logorder {
   display: grid;
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: 1fr 4fr;
       grid-template-areas:
         "a b";}
 
@@ -540,7 +543,7 @@ font-size: 40px;
 
       .trigger {
         grid-area: a;
-        background-color: #FFF7A2;
+        background-color: #bdbdbd;
       }
 
       .intro {
