--- a/style.css
+++ b/style.css
@@ -318,10 +318,15 @@ margin-top: -20px;
       grid-gap: 20px;
       margin-top: -10px;
       grid-template-areas:
+        "g g g g"
         "a b c d"
         "e f . .";
       }
 
+      .underline {
+        grid-area: g;
+      }
+      
       .photo1 {
         grid-area: a;
       }
@@ -352,9 +357,14 @@ margin-top: -20px;
             grid-template-columns: 1fr 1fr;
             grid-gap: 20px;
             grid-template-areas:
+              "g g"
               "a b"
               "c d"
               "e f";
+            }
+
+            .underline {
+              grid-area: g;
             }
 
             .photo1 {
@@ -386,10 +396,16 @@ margin-top: -20px;
               grid-template-columns: 1fr 1fr;
               grid-gap: 20px;
               grid-template-areas:
+                "g g"
                 "a b"
                 "c d"
                 "e .";
               }
+
+              .underline {
+                grid-area: g;
+              }
+
 
               .photo1 {
                 grid-area: a;
